--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@linaria/rollup": "^4.2.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
@@ -15,6 +16,7 @@
     "vite-plugin-ssr": "^0.4.43"
   },
   "dependencies": {
+    "@linaria/core": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
