--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "preview": "sirv dist/client -BG -p 8000"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
     "@linaria/rollup": "^4.2.1",
+    "@preact/preset-vite": "^2.4.0",
     "@tsconfig/strictest": "^1.0.2",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
     "sirv-cli": "^2.0.2",
     "vite": "^3.1.8",
     "vite-plugin-ssr": "^0.4.43"
   },
   "dependencies": {
     "@linaria/core": "^4.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "preact": "^10.11.2",
+    "preact-render-to-string": "^5.2.6"
   }
 }
