--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "jsxImportSource": "preact",
     "skipLibCheck": true,
     "esModuleInterop": true
-  }
+  },
+  "exclude": ["dist", "node_modules"]
 }
