Use html-rewriter-wasm instead of cheerio

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@preact/preset-vite": "^2.4.0",
     "@tsconfig/strictest": "^1.0.2",
     "@types/node": "^18.11.7",
-    "cheerio": "1.0.0-rc.12",
     "feed": "^4.2.2",
+    "html-rewriter-wasm": "^0.4.1",
     "sirv-cli": "^2.0.2",
     "tsx": "^3.11.0",
     "typescript": "^4.8.4",
