--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@linaria/rollup": "^4.2.1",
+    "@babel/core": "^7.20.5",
+    "@linaria/vite": "^4.2.4",
     "@preact/preset-vite": "^2.4.0",
     "@tsconfig/strictest": "^1.0.2",
-    "@types/node": "^18.11.7",
+    "@types/node": "^18.11.10",
     "feed": "^4.2.2",
     "html-rewriter-wasm": "^0.4.1",
     "sirv-cli": "^2.0.2",
-    "tsx": "^3.11.0",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8",
-    "vite-plugin-ssr": "^0.4.43"
+    "tsx": "^3.12.1",
+    "typescript": "^4.9.3",
+    "vite": "^3.2.4",
+    "vite-plugin-ssr": "^0.4.54"
   },
   "dependencies": {
-    "@linaria/core": "^4.2.1",
-    "preact": "^10.11.2",
+    "@linaria/core": "^4.2.3",
+    "preact": "^10.11.3",
     "preact-render-to-string": "^5.2.6"
   }
 }
